wireframe precision #74961

Closed
opened 2020-03-20 10:04:41 +01:00 by Irfan Celik · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28

Blender Version
Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 21:12, hash: d2c3544c5c
Worked: 2.81 release

Short description of error
Wireframe drawing of close objects not as precise as in Blender 2.81 with the same clipping range.

b23_wireframe_precision.jpg

b21_wireframe_precision.jpg

Exact steps for others to reproduce the error
Set clipping range start to 0.1 cm and end to 1000cm.
Apply Solidify modifier to any object with default thickness of 1cm.
Enable wireframe overlay and you can see the interior edges as well.

b23_wireframe_precision.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28 **Blender Version** Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 21:12, hash: `d2c3544c5c` Worked: 2.81 release **Short description of error** Wireframe drawing of close objects not as precise as in Blender 2.81 with the same clipping range. ![b23_wireframe_precision.jpg](https://archive.blender.org/developer/F8417352/b23_wireframe_precision.jpg) ![b21_wireframe_precision.jpg](https://archive.blender.org/developer/F8417354/b21_wireframe_precision.jpg) **Exact steps for others to reproduce the error** Set clipping range start to 0.1 cm and end to 1000cm. Apply Solidify modifier to any object with default thickness of 1cm. Enable wireframe overlay and you can see the interior edges as well. [b23_wireframe_precision.blend](https://archive.blender.org/developer/F8417356/b23_wireframe_precision.blend)
Author

Added subscriber: @irfancelik

Added subscriber: @irfancelik

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii

@fclem, both versions use the real lines drawing approach. So I wonder what must have changed.
Bug or decision?

@fclem, both versions use the real lines drawing approach. So I wonder what must have changed. Bug or decision?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This is due to a small offset that is used to reduce aliasing of wireframes.

gl_Position.z -= facing_ratio * curvature * 4.0e-5;

Your scene object is quite large compared to the clip start/end distances so this explain the precision issue.

I just found that the actual bias should depend on gl_Position.w but this will not fix your issue. So I'll set as known issue.

This is due to a small offset that is used to reduce aliasing of wireframes. ```/* Push the vertex towards the camera. Helps a bit. */ gl_Position.z -= facing_ratio * curvature * 4.0e-5; ``` Your scene object is quite large compared to the clip start/end distances so this explain the precision issue. I just found that the actual bias should depend on gl_Position.w but this will not fix your issue. So I'll set as known issue.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-03-26 16:18:57 +01:00

Should be fixed by e000dcb849

Should be fixed by e000dcb84908
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74961
No description provided.