source/blender/draw/engines/overlay/shaders/wireframe_vert.glsl
@@ -110,19 +110,22 @@ void main()
   vec3 V = (is_persp) ? normalize(ViewMatrixInverse[3].xyz - wpos) : ViewMatrixInverse[2].xyz;
 
   float facing = dot(wnor, V);
+
+  gl_Position = point_world_to_ndc(wpos);
+
+#ifndef CUSTOM_DEPTH_BIAS
   float facing_ratio = clamp(1.0 - facing * facing, 0.0, 1.0);
   float flip = sign(facing);           /* Flip when not facing the normal (i.e.: backfacing). */
   float curvature = (1.0 - wd * 0.75); /* Avoid making things worse for curvy areas. */
   vec3 wofs = wnor * (facing_ratio * curvature * flip);
   wofs = normal_world_to_view(wofs);
 
-  gl_Position = point_world_to_ndc(wpos);
-
   /* Push vertex half a pixel (maximum) in normal direction. */
   gl_Position.xy += wofs.xy * sizeViewportInv.xy * gl_Position.w;
 
   /* Push the vertex towards the camera. Helps a bit. */
-  gl_Position.z -= facing_ratio * curvature * 1.0e-5 * gl_Position.w;
+  gl_Position.z -= facing_ratio * curvature * 1.0e-6 * gl_Position.w;
+#endif
 
   /* Convert to screen position [0..sizeVp]. */
   edgeStart = ((gl_Position.xy / gl_Position.w) * 0.5 + 0.5) * sizeViewport.xy;
